--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: "Grace Vayisiriria"
+title: "KABUYAYA CHARLINE"
 baseline: "Développeur Etudiant passionné"
 description: "Développeur passionnée par la technologie, les projets innovants et le partage de connaissances."
 
